[package]
name = "frames"
description = "Contextual frames made simple."
repository = "https://github.com/bobbbay/frames"
readme = "../../README.md"

keywords = [ "frames", "context", "contextual" ]
categories = [ "mathematics" ]

version = "0.0.0"
edition = "2021"

license = "MIT"

[dependencies]
nalgebra = "0.31.0"
thiserror = "1.0.31"

[package.metadata.nix]
build = true
